--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,49 @@
-title: Byron Saltos
+title: Byron Saltos Personal Web page
 author: Byron Saltos
 email: bantoniosaltos@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Página personal.
-# social links
-twitter_username: https://twitter.com/BakuzByron
-github_username:  https://github.com/bakuz
-pinterest_username:
-facebook_username:
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
 theme: jekyll-theme-dinky
+
+# List of links in the navigation bar
+navbar-links:
+  About Me: "aboutme"
+  Resources:
+    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+    - Learn markdown: "http://www.markdowntutorial.com/"
+    - GitHub Pages: "https://pages.github.com/"
+  Author's home: "http://deanattali.com"
+
+# Image to show in the navigation bar - image must be a square (width = height)
+# Remove this parameter if you don't want an image in the navbar
+#avatar: "/img/avatar-icon.png"
+
+social-network-links:
+  rss: true
+  email: "someone@example.com"
+  facebook: byron.saltoscuzme
+  github: bakuz
+  twitter: BakuzByron
+#  reddit: yourname
+#  google-plus: +DeanAttali
+#  linkedin: daattali
+#  xing: yourname
+#  stackoverflow: "3943160/daattali"
+#  snapchat: deanat78
+#  instagram: deanat78
+#  youtube: user/deanat78
+#  spotify: yourname
+#  telephone: +14159998888
+#  steam: deanat78
+#  twitch: yourname
+#  yelp: yourname
+
+# Select which share links to show in posts
+share-links-active:
+  twitter: true
+  facebook: true
+  google: false
+linkedin: true
