--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Byron Saltos Personal Web page
+title: Personal Web page
 author: Byron Saltos
-email: bantoniosaltos@gmail.com
+#email: bantoniosaltos@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Página personal.
 
@@ -11,11 +11,7 @@ theme: jekyll-theme-dinky
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+  Blog: /blog
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -23,7 +19,7 @@ navbar-links:
 
 social-network-links:
   rss: true
-  email: "someone@example.com"
+  email: "bantoniosaltos@gmail.com"
   facebook: byron.saltoscuzme
   github: bakuz
   twitter: BakuzByron
@@ -46,4 +42,4 @@ share-links-active:
   twitter: true
   facebook: true
   google: false
-linkedin: true
+linkedin: false
