--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-title: Personal Web page
+title: Sitio Web Personal
 author: Byron Saltos
+name: Byron Saltos
 #email: bantoniosaltos@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Página personal.
+description: Sitio Web Personal
+url: https://bakuz.github.io
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
 
 theme: jekyll-theme-dinky
 
